--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
         .mapboxgl-popup{
             width: 400px;
             height: 400px;
-            opacity: 0.85;
+            opacity: 0.90;
+            background-color:'grey';
 
         }
         .mapboxgl-popup-content{
             text-align: center;
             font-family: 'Open Sans',sans-serif;
+            background-color:'grey';
         }
         </style>
 </head>
